
2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_display): implemented DISPLAY ALL "blah" WITH SIZE
	  (bug #428).

2017-09-10  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_display, field_accept): fixed SIZE not working if it
	  was less than the item's length (bug #423).
	* screenio.c: fixed naming style.

2017-09-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_get_all, field_accept): beep instead of
	  wrong-casting characters we currently can't store
	* screenio.c (field_accept): beep on insert if field is already full
	* screenio.c (cob_screen_init): set cursor depending on insert mode
	  to vertical bar cursor (on) or square cursor (off)
	* screenio.c (cob_screen_get_all): fix for handling BACKSPACE,
	  added handling for DELETE and INSERT keys and COB_INSERT_MODE

2017-08-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_init)[_WIN32]: only use GetUsername if HAVE_GETUSERNAME
	  is defined (for example in config.h)

2017-08-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: moved code to cleanup modules to cob_exit_common_modules
	  and do this only once (after exit handler calls, before call cleanup)

2017-08-26  Ron Norman <rjn@inglenet.com>

	* common.c: Free the structs used to track modules on STOP RUN

2017-08-18  Ron Norman <rjn@inglenet.com>

	* common.c: Keep list of all active modules for later free of
	            memory allocated for decimal constants
	* common.c: cob_stop_run issue callbacks to free any decimal memory
	* common.c: cob_module_enter check for Recursive CALL used in the
	            wrong place. Add cob_module_global_enter routine.
	* common.h: Add cob_module_global_enter routine.
	            Add cob_stmt_exception to cob_global, used to indicate
	            the previous statment has ON EXCEPTION clause.

2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
